@startuml

title __WEEK3's Class Diagram__\n

  namespace Week3 {
    class Week3.BorderLayoutExample {
        {static} + main()
    }
  }
  

  namespace Week3 {
    class Week3.CarDashboard {
        + CarDashboard()
        {static} + main()
        - addImageLabel()
        - makeRoundImageIcon()
    }
  }
  

  namespace Week3 {
    class Week3.ColorService {
        - randomGreenColor : String
        + ColorService()
        + changeBackgroundColor()
    }
  }
  

  namespace Week3 {
    class Week3.DateTimeService {
        + showDateTime()
    }
  }
  

  namespace Week3 {
    class Week3.FileService {
        + saveToFile()
    }
  }
  

  namespace Week3 {
    class Week3.MenuInterface {
        - colorItem : JMenuItem
        - dateItem : JMenuItem
        - exitItem : JMenuItem
        - menu : JMenu
        - menuBar : JMenuBar
        - saveItem : JMenuItem
        - textArea : JTextArea
        + MenuInterface()
        {static} + main()
        - setupMenu()
        - setupTextArea()
    }
  }
  

  Week3.CarDashboard -up-|> javax.swing.JFrame
  Week3.MenuInterface -up-|> javax.swing.JFrame
  Week3.MenuInterface o-- Week3.ColorService : colorService
  Week3.MenuInterface o-- Week3.DateTimeService : dateTimeService
  Week3.MenuInterface o-- Week3.FileService : fileService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
